Fixed full screen edit css issue where part of the dashboard became visible

--- a/src/css/less/grafana.less
+++ b/src/css/less/grafana.less
@@ -62,6 +62,7 @@
   .main-view-container {
     overflow: hidden;
     height: 0;
+    padding: 0;
     .row-control-inner {
       display: none;
     }
